--- a/package.json
+++ b/package.json
@@ -5,12 +5,38 @@
   "main": "electron/main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "electron ."
+    "build:backend": "pyinstaller wordhunt-backend.spec --distpath build/backend --clean",
+    "build:electron": "electron-builder",
+    "build": "npm run build:backend && npm run build:electron"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "build": {
+    "appId": "com.wordhunt.solver",
+    "productName": "Word Hunt Solver",
+    "files": [
+      "electron/**/*",
+      "frontend/**/*"
+    ],
+    "extraResources": [
+      {
+        "from": "build/backend/",
+        "to": "backend",
+        "filter": [
+          "**/*"
+        ]
+      }
+    ],
+    "mac": {
+      "target": "dmg"
+    },
+    "win": {
+      "target": "nsis"
+    },
+    "linux": {
+      "target": "AppImage"
+    }
+  },
   "devDependencies": {
-    "electron": "^40.6.0"
+    "electron": "^40.6.0",
+    "electron-builder": "^26.8.1"
   }
 }
