--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,9 @@ on:
         description: "Enter the version (e.g., v1.0.0)"
         required: true
 
+permissions:
+  contents: write
+
 jobs:
   build:
     strategy:
